--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl"
   Google search results) and in your feed.xml site description.
 
 baseurl: "" # the subpath of the site
-url: "https://github.com/Jiwon-JJW/Jiwon-JJW.github.io.git" # the base hostname & protocol for your site
+url: "https://Jiwon-JJW.github.io.git" # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
 timezone:
