--- a/_config.yml
+++ b/_config.yml
@@ -16,20 +16,20 @@
 title: MatJek
 description: > # this means to ignore newlines until "baseurl:"
   Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
-baseurl: ""
-url: "Jiwon-JJW.github.io"
+baseurl: "/JJW"
+url: "https://Jiwon-JJW.github.io"
 permalink: /:year/:month/:day/:title
 repository: ShawnTeoh/matjek
 paginate: 5
 
 # MatJek specific configurations
 github_profile: "https://github.com/ShawnTeoh"
-user: "JJW"
-user_email: "john@doe.com"
-contact_url: "https://goo.gl/tVljbV"
+user: "Jiwon Jung"
+user_email: "znfhdnal1@gmail.com"
+contact_url: "https://Jiwon-JJW.github.io"
 google_tracking_id: "UA-96359860-1"
 google_site_verification: "UA-96359860-1"
-disqus_shortname: "matjek"
+disqus_shortname: "JJW-Blog"
 
 # Build settings
 markdown: kramdown
