--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: no style, please! # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
+title: Study Blog # name of the site
+author: Starve # name of site's author
+email: znfhdnal1@gmail.com # email of site's author
+url: https://jiwon-jjw.github.io/ # root address of the site
 baseurl: "/no-style-please" # subpath of the site, e.g. "/blog"
 description: > # description of the site (multiple lines allowed)
   A (nearly) no-CSS, fast, minimalist Jekyll theme.
