--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,10 @@ theme: jekyll-theme-persephone
 # # The followings are settings for displays of your blog.
  theme_setting:
    # The slides count in the slides layout. Default is 4.
-   slides_count: 5
+#   slides_count: 5
    # The ← back URL on the top of your post page. Default is your site's home page.
-   blog_page: "blog/index.md"
+   blog_page: "https://jiwon-jjw.github.io/"
+   # "blog/index.md"
    # The URL on your name on the bottom of your post and page. Default is your site's home page.
    about_page: "about.md"
    #  The URL of the menu icon(which has three black lines). Will be shown on the slides/book/chapter layouts It won't be shown if blank.
