--- a/_config.yml
+++ b/_config.yml
@@ -28,17 +28,17 @@ theme: jekyll-theme-persephone
    # The slides count in the slides layout. Default is 4.
 #   slides_count: 5
    # The ← back URL on the top of your post page. Default is your site's home page.
-   blog_page: "https://jiwon-jjw.github.io/"
+   blog_page: https://jiwon-jjw.github.io/
    # "blog/index.md"
    # The URL on your name on the bottom of your post and page. Default is your site's home page.
    about_page: "about.md"
    #  The URL of the menu icon(which has three black lines). Will be shown on the slides/book/chapter layouts It won't be shown if blank.
-   archive_page: "archive.md"
+   archive_page: https://velog.io/@znfhdnal1
    # The nav links on the top right of home/page/post/blog layout. You can set a local page(by setting a layout's path) or and external link ( both title and url are required) here.
    nav_pages:
-     - "about.md"
-     - "test"
-       title: "External Link Title"
+     - home
+     - post
+       title: post
        url: "https://your-external-link.com"
    # Every default value in the following settings is false. You can set them globally here or separately in a single post/page/chapter.
    code: true # Code highlight.
